# blood-rust

./: .gitignore  BUG_REPORT_010_HANDLER_OP_PUSH_STR.md  BUG_REPORT_011_SHORT_CIRCUIT_EVALUATION.md  BUG_REPORT_STATIC_INITIALIZATION.md  BUG_VEC_INDEX_CORRUPTION.md  CONCURRENCY.md  CONTENT_ADDRESSED.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DIAGNOSTICS.md  DISPATCH.md  FEATURE_REQUEST_THREAD_BUILTINS.md  FFI.md  FORMAL_SEMANTICS.md  GETTING_STARTED.md  GOVERNANCE.md  GRAMMAR.md  IMPLEMENTATION_STATUS.md  MEMORY_MODEL.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md  STDLIB.md  UCM.md  naming.md
blood-runtime/: Cargo.toml
blood-runtime/benches/: effects_bench.rs  memory_bench.rs
blood-runtime/src/: cancellation.rs  channel.rs  config.rs  continuation.rs  ffi.rs  ffi_exports.rs  fiber.rs  fiber_local.rs  io.rs  lib.rs  log.rs  memory.rs  net.rs  observability.rs  panic.rs  process.rs  scheduler.rs  serialize.rs  signal.rs  simd.rs  stdlib.rs  sync.rs  timeout.rs
blood-runtime/tests/: ffi_integration.rs  property_tests.rs
blood-std/: Cargo.toml
blood-std/src/: lib.rs
blood-std/std/: lib.blood  prelude.blood
blood-std/std/collections/: btree.blood  deque.blood  hashmap.blood  hashset.blood  linked_list.blood  mod.blood  vec.blood
blood-std/std/compiler/: lexer.blood  parser.blood  typeck.blood
blood-std/std/core/: box_.blood  frozen.blood  mod.blood  option.blood  result.blood  string.blood
blood-std/std/effects/: async_.blood  error.blood  fiber.blood  io.blood  mod.blood  nondet.blood  panic.blood  random.blood  resource.blood  stale.blood  state.blood  yield_.blood
blood-std/std/fs/: mod.blood
blood-std/std/handlers/: async_handlers.blood  error_handlers.blood  io_handlers.blood  mod.blood  resource_handlers.blood  state_handlers.blood
blood-std/std/io/: error.blood  mod.blood  read.blood  write.blood
blood-std/std/iter/: mod.blood
blood-std/std/mem/: mod.blood
blood-std/std/net/: mod.blood
blood-std/std/ops/: mod.blood
blood-std/std/primitive/: mod.blood
blood-std/std/sync/: atomic.blood  mod.blood  mutex.blood
blood-std/std/traits/: clone.blood  cmp.blood  convert.blood  default.blood  fmt.blood  hash.blood  marker.blood  mod.blood
blood-std/tests/: test_hashmap.blood  test_option.blood  test_parser.blood  test_result.blood  test_string.blood  test_vec.blood
blood-tools/repl/: Cargo.toml
blood-tools/repl/src/: lib.rs  main.rs
blood-tools/ucm/: Cargo.toml
blood-tools/ucm/src/: codebase.rs  hash.rs  lib.rs  main.rs  storage.rs  sync.rs  test_runner.rs
bloodc/: Cargo.toml  build.rs
bloodc/benches/: content_bench.rs  escape_bench.rs  lexer_bench.rs  parser_bench.rs  runtime_bench.rs
bloodc/fuzz/: Cargo.toml
bloodc/fuzz/fuzz_targets/: fuzz_effects.rs  fuzz_handler.rs  fuzz_lexer.rs  fuzz_mir_lowering.rs  fuzz_parser.rs  fuzz_parser_expr.rs  fuzz_patterns.rs  fuzz_typeck_full.rs
bloodc/fuzz/src/: grammar.rs
bloodc/src/: arena.rs  ast.rs  attr.rs  diagnostics.rs  expand.rs  lexer.rs  lib.rs  macro_expand.rs  main.rs  parser.rs  span.rs  syntax_kind.rs  trivia.rs  ui_tests.rs
bloodc/src/codegen/: context.rs  debug_info.rs  expr.rs  mir_codegen.rs  mod.rs  runtime.rs  types.rs
bloodc/src/content/: build_cache.rs  canonical.rs  distributed_cache.rs  hash.rs  mod.rs  namespace.rs  storage.rs  vft.rs
bloodc/src/derive/: clone.rs  default.rs  eq.rs  hash.rs  mod.rs
bloodc/src/effects/: evidence.rs  handler.rs  infer.rs  lowering.rs  mod.rs  std_effects.rs
bloodc/src/hir/: def.rs  expr.rs  item.rs  mod.rs  ty.rs
bloodc/src/mir/: body.rs  closure_analysis.rs  escape.rs  lowering.rs  mod.rs  ptr.rs  snapshot.rs  static_evidence.rs  types.rs  validate.rs  visitor.rs
bloodc/src/package/: cache.rs  fetcher.rs  lockfile.rs  mod.rs  resolver.rs  version.rs
bloodc/src/parser/: expr.rs  item.rs  pattern.rs  tests.rs  types.rs
bloodc/src/project/: compiler.rs  graph.rs  manifest.rs  mod.rs  resolve.rs
bloodc/src/snapshots/: bloodc__ui_tests__array_heterogeneous.snap  bloodc__ui_tests__closure_param_type_mismatch.snap  bloodc__ui_tests__duplicate_function.snap  bloodc__ui_tests__duplicate_struct.snap  bloodc__ui_tests__generic_inference_failure.snap  bloodc__ui_tests__match_arm_type_mismatch.snap  bloodc__ui_tests__mut_ref_to_immutable.snap  bloodc__ui_tests__mutate_immutable.snap  bloodc__ui_tests__parse_missing_semicolon.snap  bloodc__ui_tests__parse_unclosed_brace.snap  bloodc__ui_tests__parse_unexpected_token.snap  bloodc__ui_tests__struct_missing_field.snap  bloodc__ui_tests__struct_unknown_field.snap  bloodc__ui_tests__too_many_args.snap  bloodc__ui_tests__type_mismatch_let.snap  bloodc__ui_tests__undefined_function.snap  bloodc__ui_tests__undefined_module_path.snap  bloodc__ui_tests__undefined_type.snap  bloodc__ui_tests__undefined_variable.snap  bloodc__ui_tests__while_condition_not_bool.snap  bloodc__ui_tests__wrong_arg_count.snap
bloodc/src/typeck/: ambiguity.rs  borrow.rs  const_eval.rs  context.rs  dispatch.rs  effect.rs  error.rs  exhaustiveness.rs  ffi.rs  infer.rs  lifetime.rs  linearity.rs  lint.rs  methods.rs  mod.rs  resolve.rs  suggestion.rs  tests.rs  unify.rs  variance.rs
bloodc/tests/: codegen_regression.rs  end_to_end.rs  example_files.rs  hash_stability.rs  pipeline_integration.rs
bloodc/tests/codegen_fixtures/: array_indexing.blood  basic_arithmetic.blood  closure_basic.blood  closure_capture.blood  effect_state.blood  enum_match.blood  function_calls.blood  generic_enum.blood  generic_function.blood  generic_struct.blood  higher_order_fn.blood  if_call_condition_string.blood  if_else.blood  nested_struct.blood  recursion.blood  static_mut.blood  struct_fields.blood  while_loop.blood
bloodc/tests/fixtures/: assoc_type_test.blood  box_new.blood  box_test.blood  builtin_methods.blood  cache_test_file_a.blood  cache_test_file_b.blood  cli_args_builtins.blood  contextual_keywords.blood  cross_module_name_collision.blood  dispatch_basic.blood  enum_nested_basic.blood  enum_nested_i128.blood  enum_nested_i64.blood  enum_nested_multi_field.blood  enum_ref_match.blood  (+31 more)
(+787 files in other folders)
