[workspace]
resolver = "2"
members = [
    "bloodc",
    "blood-runtime",
    "blood-std",
]
exclude = [
    "bloodc/fuzz",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blood-lang/blood"
rust-version = "1.75"

[workspace.dependencies]
# Lexing
# Note: logos 0.16 has improved regex semantics but with performance trade-off.
# Staying on 0.14 for now; see https://github.com/maciejhirsz/logos/releases
logos = "0.14"

# Error reporting
# Note: ariadne 0.5+ available but requires API migration
ariadne = "0.4"
thiserror = "2.0"

# Data structures
indexmap = "2.7"
rustc-hash = "2.1"

# Interning
string-interner = "0.18"

# Content addressing
blake3 = "1.6"

# Serialization (for AST caching)
serde = { version = "1.0", features = ["derive"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "string"] }

# Testing
pretty_assertions = "1.4"
insta = { version = "1.42", features = ["yaml"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Ordered floats (for AST)
ordered-float = "4.5"

# Bit flags for pointer metadata
bitflags = "2.6"

# LLVM code generation
inkwell = { version = "0.5", features = ["llvm14-0"] }

# File system utilities
walkdir = "2.5"
dirs = "5.0"
tempfile = "3.15"

# Embedded database for persistent storage
sled = "0.34"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
