[workspace]
resolver = "2"
members = [
    "bloodc",
    "blood-runtime",
    "blood-std",
    "blood-tools/fmt",
    "blood-tools/lsp",
    "blood-tools/ucm",
]
exclude = [
    "bloodc/fuzz",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jkindrix/blood"
rust-version = "1.77"

[workspace.dependencies]
# Blood crates
bloodc = { path = "bloodc" }
blood-runtime = { path = "blood-runtime" }
blood-std = { path = "blood-std" }

# Lexing
# Note: logos 0.16 has improved regex semantics but with performance trade-off.
# Staying on 0.14 for now; see https://github.com/maciejhirsz/logos/releases
logos = "0.14"

# Error reporting
# Note: ariadne 0.5+ available but requires API migration
ariadne = "0.4"
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
indexmap = "2.7"
rustc-hash = "2.1"

# Interning
string-interner = "0.18"

# Content addressing
blake3 = "1.6"

# Serialization (for AST caching)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env", "string"] }

# Testing
pretty_assertions = "1.4"
insta = { version = "1.42", features = ["yaml"] }
proptest = "1.5"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Ordered floats (for AST)
ordered-float = "4.5"

# Bit flags for pointer metadata
bitflags = "2.6"

# LLVM code generation
inkwell = { version = "0.5", features = ["llvm14-0"] }

# File system utilities
walkdir = "2.5"
dirs = "5.0"
tempfile = "3.15"

# Embedded database for persistent storage
sled = "0.34"

# HTTP client for distributed cache
ureq = "2.10"

# Hashing for package verification
sha2 = "0.10"
hex = "0.4"

# Archive handling for package extraction
tar = "0.4"
flate2 = "1.0"

# Git operations for git-based dependencies
git2 = "0.19"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"      # Smaller binaries, no unwinding overhead
strip = "symbols"    # Strip symbols from release builds

[profile.bench]
lto = true
codegen-units = 1
