[package]
name = "blood-std"
version = "0.1.0"
edition = "2021"
description = "Blood language standard library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blood-lang/blood"

[dependencies]
# The standard library is written in Blood syntax
# This crate provides Rust tooling support for development

[dev-dependencies]
