[package]
name = "bloodc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The Blood programming language compiler"
default-run = "blood"

[dependencies]
logos.workspace = true
ariadne.workspace = true
thiserror.workspace = true
indexmap.workspace = true
rustc-hash.workspace = true
string-interner.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
ordered-float.workspace = true
inkwell.workspace = true
bitflags.workspace = true
walkdir.workspace = true
dirs.workspace = true
sled.workspace = true
ureq.workspace = true
sha2.workspace = true
hex.workspace = true
tar.workspace = true
flate2.workspace = true
git2.workspace = true

[build-dependencies]
blake3 = "1.5"

[dev-dependencies]
pretty_assertions.workspace = true
insta.workspace = true
criterion.workspace = true
tempfile.workspace = true
proptest.workspace = true

[[bin]]
name = "blood"
path = "src/main.rs"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "content_bench"
harness = false

[[bench]]
name = "runtime_bench"
harness = false

[[bench]]
name = "escape_bench"
harness = false
