[package]
name = "blood-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive REPL for Blood programming language"

[[bin]]
name = "blood-repl"
path = "src/main.rs"

[lib]
name = "blood_repl"
path = "src/lib.rs"

[dependencies]
bloodc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# REPL specific
rustyline.workspace = true
colored.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
