[package]
name = "blood-ucm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-addressed codebase manager for Blood"

[[bin]]
name = "blood-ucm"
path = "src/main.rs"

[lib]
name = "blood_ucm"
path = "src/lib.rs"

[dependencies]
bloodc.workspace = true
string-interner.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap = { version = "4.4", features = ["derive"] }

# Hashing and storage
blake3 = "1.5"
hex = "0.4"
rusqlite = { version = "0.30", features = ["bundled"] }

# Async
tokio.workspace = true

# Serialization
postcard = { version = "1.1", features = ["alloc", "use-std"] }

[dev-dependencies]
tempfile.workspace = true
