[package]
name = "bloodc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[lib]
path = "src/lib.rs"

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.bloodc]
path = ".."

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parser_expr"
path = "fuzz_targets/fuzz_parser_expr.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_effects"
path = "fuzz_targets/fuzz_effects.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_handler"
path = "fuzz_targets/fuzz_handler.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_grammar"
path = "fuzz_targets/fuzz_grammar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_typeck_full"
path = "fuzz_targets/fuzz_typeck_full.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mir_lowering"
path = "fuzz_targets/fuzz_mir_lowering.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_patterns"
path = "fuzz_targets/fuzz_patterns.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
